# grpcbackend_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  grpcbackend_cpp.sln
cmake/: GitUtils.cmake
debug_client/: main.cpp  makefile
example_app/: CMakeLists.txt  example_app.vcxproj  httpd.conf  main.cpp  makefile  rpc_api.proto
example_app/public/: index.html
grpcbackend_cpp/: CMakeLists.txt  FindGRPC.cmake  FindProtobuf.cmake  GenerateGRPC.cmake  attribute.h  filesystem.cpp  filesystem.h  grpcbackend_cpp.vcxproj  grpcbackend_cpp.vcxproj.filters  handler.cpp  handler.grpc.pb.cc  handler.grpc.pb.h  handler.h  handler.pb.cc  handler.pb.h  main.cpp  makefile  server.cpp  server.h  uri.cpp  uri.h
grpcbackend_cpp/cmake/: grpcbackend_cppConfig.cmake.in
grpcbackend_cpp/http/: connection.h  middleware.h  mime.h  notfound_exception.h  request.h  response.h  route_handler.h  route_params.h  router.cpp  router.h
grpcbackend_cpp/http/mw/: connection_forward.h  logger.cpp  logger.h  mime_type.cpp  mime_type.h  request_forward.h  response_forward.h  rewrite.cpp  rewrite.h
grpcbackend_cpp/http/route/: filesystem_route_handler.cpp  filesystem_route_handler.h  function_route_handler.h
grpcbackend_cpp/include/grpcbackend/: attribute_host.h  filesystem.h  server.h  uri.h
grpcbackend_cpp/include/grpcbackend/http/: con_handler.h  connection.h  http_exception.h  route_handler.h
grpcbackend_cpp/include/grpcbackend/http/mw/: connection_forward.h  mime_type.h  rewrite.h
grpcbackend_cpp/include/grpcbackend/http/route/: filesystem_route_handler.h  function_route_handler.h
grpcbackend_cpp/include/grpcbackend/util/: json_rpc.h
grpcbackend_cpp/include/grpcbackend/websocket/: connection.h  hub.h
grpcbackend_cpp/src/: filesystem.cpp  handler.cpp  server.cpp  uri.cpp
grpcbackend_cpp/src/http/: connection.cpp  router.cpp
grpcbackend_cpp/src/http/mw/: logger.cpp  mime_type.cpp  rewrite.cpp
grpcbackend_cpp/src/http/route/: filesystem_route_handler.cpp
grpcbackend_cpp/src/util/: json_rpc.cpp
grpcbackend_cpp/src/websocket/: connection.cpp  hub.cpp
grpcbackend_cpp/websocket/: con_handler.h  connection.h  hub.cpp  hub.h
protoc-gen-jsonrpc/: CMakeLists.txt  README.md
protoc-gen-jsonrpc/include/: grpcbackend_server_generator.h  helpers.h  typescript_client_generator.h
protoc-gen-jsonrpc/proto/: jsonrpc.proto
protoc-gen-jsonrpc/src/: grpcbackend_server_generator.cpp  main.cpp  typescript_client_generator.cpp
test/: CMakeLists.txt  RequestTest.cpp  RouterTest.cpp  URITest.cpp  dummy_connection.h  dummy_request.h  dummy_response.h  makefile  test.vcxproj  test.vcxproj.filters
